<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_moment.AddMomentFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_moment"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/add_image"
                android:scaleType="fitXY"
                android:src="@drawable/uploadimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/takePhoto"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/add_moment_take_photo"
                    android:layout_marginEnd="2dp"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />
                <Button
                    android:id="@+id/getLocation"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_height="50dp"
                    android:text="@string/add_moment_get_location"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/uploadTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="@string/add_moment_enter_title"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <EditText
                android:id="@+id/uploadDesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="@string/add_moment_enter_moment_description"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uploadDate"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/lavender_border"
                    android:gravity="center"
                    android:textColor="@color/lavender"
                    android:hint="@string/add_moment_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/uploadLocation"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/lavender_border"
                    android:gravity="center"
                    android:textColor="@color/lavender"
                    android:hint="@string/add_moment_location"
                    android:inputType="textCapSentences|textMultiLine" />
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_moment_save"
                android:textSize="18sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>