<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moment_detail.MomentDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/lavender_border"
            android:padding="20dp">

            <EditText
                android:id="@+id/detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/lavender_border"
                android:inputType="textCapSentences|textMultiLine"
                android:minWidth="100dp"
                android:padding="10dp"
                android:text="@string/detail_title"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/uploadimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detailDate"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/lavender_border"
                    android:gravity="center"
                    android:hint="@string/detail_date_hint"
                    android:padding="16dp"
                    android:textColor="@color/lavender"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/detailLocation"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/lavender_border"
                    android:gravity="center"
                    android:hint="@string/detail_location_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />
            </LinearLayout>

            <EditText
                android:id="@+id/detailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="20dp"
                android:text="@string/detail_description"
                android:textColor="@color/lavender"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:text="@string/detail_update"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/detail_delete"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>