<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/recImage"
            android:src="@drawable/baseline_domain_verification_24"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/recTitle"
            android:text="@string/moment_item_title"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/recImage"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/recDate"
            android:text="@string/moment_item_date"
            android:layout_toEndOf="@id/recTitle"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/lavender"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/recLocation"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/moment_item_location"
            android:textColor="@color/lavender"
            android:textSize="15sp"
            android:layout_toEndOf="@id/recImage"
            android:layout_below="@id/recTitle"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:layout_marginBottom="12dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>